--- a/index.html
+++ b/index.html
@@ -184,6 +184,38 @@
 		
 		</div>
 	</div>
+	<div class="time">
+		<div class="time_box">
+			<h1>Christmas Countdown</h1>
+			<ul class="remainTime">
+				<li>
+					<h2 class="day">22</h2>
+					<p>day</p>
+				</li>
+				<li>
+					<h2 class="hours">22</h2>
+					<p>hours</p>
+				</li>
+				<li>
+					<h2 class="minutes">46</h2>
+					<p>minutes</p>
+				</li>
+				<li>
+					<h2 class="seconds">22</h2>
+					<p>seconds</p>
+				</li>
+			</ul>
+		</div>
+		<div class="Gifts">
+			<img src="image/千库网_架着麋鹿的圣诞老人_元素编号12585541.png" alt="">
+		</div>
+	</div>
+	<div class="blessing">
+		<h1>Marry Christmas</h1>
+		<h1>Christmas greetings and best wishes!</h1>
+		<h1>Have you in every day like in Christmas.</h1>
+	</div>
+	<p class="go">--&gt;</p>
 	<script>
 		$(function(){
 			var num = 0;
@@ -191,14 +223,17 @@
 				num++
 				if(num%2 == 0){
 					$("#bk").css("transform","rotateY(0deg)")
+					$("body>p").fadeOut();
 					setTimeout(function(){
 						$("#main").css("transform","rotateZ(30deg)")
+						
 					},500)
 				}
 				else{
 					$("#main").css("transform","rotateZ(0deg)")
 					setTimeout(function(){
 						$("#bk").css("transform","rotateY(-180deg)")
+						$("body>p").fadeIn();
 					},500)
 				}
 			})
@@ -207,14 +242,17 @@
 				num++
 				if(num%2 == 0){
 					$("#bk").css("transform","rotateY(0deg)")
+					$("body>p").fadeOut();
 					setTimeout(function(){
 						$("#main").css("transform","rotateZ(30deg)")
+						
 					},500)
 				}
 				else{
 					$("#main").css("transform","rotateZ(0deg)")
 					setTimeout(function(){
 						$("#bk").css("transform","rotateY(-180deg)")
+						$("body>p").fadeIn();
 					},500)
 				}
 			})
