--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" href="css/css.css">
 	<script src="js/jquery-3.6.0.min.js"></script>
 	<script src="js/js.js"></script>
+	<meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
 </head>
 
 <body>
