--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <title>无标题文档</title>
 	<link rel="stylesheet" href="css/css.css">
 	<script src="js/jquery-3.6.0.min.js"></script>
-	<script src="js/js.js"></script>
 	<meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,6 +12,7 @@
 </head>
 
 <body>
+	<div class="page"></div> 
 	<div id="loading">
 		<img src="image/圣诞老人.png" alt="" class="old_human">
 		<img src="image/圣诞老人.png" alt="" class="old_human">
@@ -215,9 +215,9 @@
 		</div>
 	</div>
 	<div class="blessing">
-		<h1>Marry Christmas</h1>
-		<h1>Christmas greetings and best wishes!</h1>
-		<h1>Have you in every day like in Christmas.</h1>
+		<h1>Marry Christmas<br>圣诞节快乐呀！</h1>
+		<h1>圣诞钟声敲响 雪花飘乱飞舞</h1>
+		<h1>Have you in every day like<br> in Christmas.</h1>
 	</div>
 	<p class="go">--&gt;</p>
 	<script>
@@ -263,4 +263,5 @@
 		})
 	</script>
 </body>
+	<script src="js/js.js"></script>
 </html>
