--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/css.css">
 	<script src="js/jquery-3.6.0.min.js"></script>
 	<meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, user9-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 </head>
@@ -214,12 +214,19 @@
 			<img src="image/千库网_架着麋鹿的圣诞老人_元素编号12585541.png" alt="">
 		</div>
 	</div>
+	<div class="name">
+		<h1>输入自己的名字！</h1>
+		<input type="text">
+		<button>Next</button>
+	</div>
 	<div class="blessing">
-		<h1>Marry Christmas<br>圣诞节快乐呀！</h1>
-		<h1>圣诞钟声敲响 雪花飘乱飞舞</h1>
-		<h1>Have you in every day like<br> in Christmas.</h1>
+		<h1 style="--i:1">Marry Christmas<br>圣诞节快乐呀！</h1>
+		<h1 style="--i:2">是一年一度的圣诞！</h1>
+		<h1 style="--i:3">I wish you a happy life in the following days</h1>
+		<h1 style="--i:4">祝你在之后的日子都快快乐乐的度过哇</h1>
 	</div>
 	<p class="go">--&gt;</p>
+	<audio id="music" src="video/Kids Choir - Jingle Bells.mp3" loop autoplay></audio>
 	<script>
 		$(function(){
 			var num = 0;
