--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>无标题文档</title>
+<title>圣诞</title>
 	<link rel="stylesheet" href="css/css.css">
 	<script src="js/jquery-3.6.0.min.js"></script>
 	<meta name="viewport"
